# HOG-feature-descriptor

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  hogconfig.txt
application/: CMakeLists.txt  main.cpp
cmake/: build_prefix.cmake  doxygen_config.cmake  hoglibraryConfig.cmake.in
docs/: Doxyfile.in
docs/html/: _c_make_c_x_x_compiler_id_8cpp.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_h_o_g_descriptor-members.html  class_h_o_g_descriptor.html  class_h_o_g_descriptor.js  class_h_o_g_descriptor_a23fed7ae98c9aa771ab33fcba58a720d_cgraph.map  class_h_o_g_descriptor_a23fed7ae98c9aa771ab33fcba58a720d_cgraph.md5  class_h_o_g_descriptor_a322b311fee196a3372819edc2b5cafd8_icgraph.map  class_h_o_g_descriptor_a322b311fee196a3372819edc2b5cafd8_icgraph.md5  class_h_o_g_descriptor_a47f0882346c2ad1f693ee98a517cb6d4_cgraph.map  class_h_o_g_descriptor_a47f0882346c2ad1f693ee98a517cb6d4_cgraph.md5  class_h_o_g_descriptor_a47f0882346c2ad1f693ee98a517cb6d4_icgraph.map  class_h_o_g_descriptor_a47f0882346c2ad1f693ee98a517cb6d4_icgraph.md5  class_h_o_g_descriptor_a5d80481a2878b52c03a8ded165ddfe52_icgraph.map  class_h_o_g_descriptor_a5d80481a2878b52c03a8ded165ddfe52_icgraph.md5  class_h_o_g_descriptor_a7d7ba6487f9d68d5cc394c58d016f76a_cgraph.map  class_h_o_g_descriptor_a7d7ba6487f9d68d5cc394c58d016f76a_cgraph.md5  class_h_o_g_descriptor_a7d7ba6487f9d68d5cc394c58d016f76a_icgraph.map  class_h_o_g_descriptor_a7d7ba6487f9d68d5cc394c58d016f76a_icgraph.md5  class_h_o_g_descriptor_a941031c7fa95e2194f332d04aa0de562_icgraph.map  class_h_o_g_descriptor_a941031c7fa95e2194f332d04aa0de562_icgraph.md5  class_h_o_g_descriptor_aa0f30146937363e1ddb619ebec5c8068_icgraph.map  class_h_o_g_descriptor_aa0f30146937363e1ddb619ebec5c8068_icgraph.md5  class_h_o_g_descriptor_ac3ffd99ecb62f8c72c908745715151b8_cgraph.map  class_h_o_g_descriptor_ac3ffd99ecb62f8c72c908745715151b8_cgraph.md5  class_h_o_g_descriptor_ac3ffd99ecb62f8c72c908745715151b8_icgraph.map  class_h_o_g_descriptor_ac3ffd99ecb62f8c72c908745715151b8_icgraph.md5  class_h_o_g_descriptor_ad09ae14f8b447abdee23bbe810a98313_icgraph.map  class_h_o_g_descriptor_ad09ae14f8b447abdee23bbe810a98313_icgraph.md5  class_h_o_g_descriptor_aefe5eefa01f8d055f6d9721b7f5b54f1_cgraph.map  class_h_o_g_descriptor_aefe5eefa01f8d055f6d9721b7f5b54f1_cgraph.md5  class_h_o_g_descriptor_af66de1d67f450cf773bb59017de97de2_cgraph.map  class_h_o_g_descriptor_af66de1d67f450cf773bb59017de97de2_cgraph.md5  class_h_o_g_descriptor_af66de1d67f450cf773bb59017de97de2_icgraph.map  class_h_o_g_descriptor_af66de1d67f450cf773bb59017de97de2_icgraph.md5  class_h_o_g_plots-members.html  class_h_o_g_plots.html  class_h_o_g_plots.js  (+154 more)
docs/html/search/: all_0.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_b.js  all_d.js  all_e.js  classes_0.js  defines_2.js  defines_3.js  defines_4.js  defines_6.js  files_0.js  files_1.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
docs/latex/: _c_make_c_x_x_compiler_id_8cpp.tex  annotated.tex  class_h_o_g_descriptor.tex  class_h_o_g_descriptor_a23fed7ae98c9aa771ab33fcba58a720d_cgraph.md5  class_h_o_g_descriptor_a322b311fee196a3372819edc2b5cafd8_icgraph.md5  class_h_o_g_descriptor_a47f0882346c2ad1f693ee98a517cb6d4_cgraph.md5  class_h_o_g_descriptor_a47f0882346c2ad1f693ee98a517cb6d4_icgraph.md5  class_h_o_g_descriptor_a5d80481a2878b52c03a8ded165ddfe52_icgraph.md5  class_h_o_g_descriptor_a7d7ba6487f9d68d5cc394c58d016f76a_cgraph.md5  class_h_o_g_descriptor_a7d7ba6487f9d68d5cc394c58d016f76a_icgraph.md5  class_h_o_g_descriptor_a941031c7fa95e2194f332d04aa0de562_icgraph.md5  class_h_o_g_descriptor_aa0f30146937363e1ddb619ebec5c8068_icgraph.md5  class_h_o_g_descriptor_ac3ffd99ecb62f8c72c908745715151b8_cgraph.md5  class_h_o_g_descriptor_ac3ffd99ecb62f8c72c908745715151b8_icgraph.md5  class_h_o_g_descriptor_ad09ae14f8b447abdee23bbe810a98313_icgraph.md5  class_h_o_g_descriptor_aefe5eefa01f8d055f6d9721b7f5b54f1_cgraph.md5  class_h_o_g_descriptor_af66de1d67f450cf773bb59017de97de2_cgraph.md5  class_h_o_g_descriptor_af66de1d67f450cf773bb59017de97de2_icgraph.md5  class_h_o_g_plots.tex  class_h_o_g_plots_a6810288024bb8878252d4115fd265bef_icgraph.md5  dir_072963624de49e5593b1bf28986b5e1b.tex  dir_072963624de49e5593b1bf28986b5e1b_dep.md5  dir_1ef6f898ef6a53b9d5c427138c5fd772.tex  dir_1ef6f898ef6a53b9d5c427138c5fd772_dep.md5  dir_1ff95392bc4e65547c61a42698fda530.tex  dir_1ff95392bc4e65547c61a42698fda530_dep.md5  dir_3cc6f82144161bc326615b1fb6f2c9ca.tex  dir_3f7d59e94b4340a7f856987296312d24.tex  dir_4e7c8c4fc0d923782da8a23d70a9725b.tex  dir_4e7c8c4fc0d923782da8a23d70a9725b_dep.md5  dir_4fef79e7177ba769987a8da36c892c5f.tex  dir_577b48e9faf82c5519c8aa8de24e6d95.tex  dir_5ecd33620c1adb7183d368793262175c.tex  dir_5ecd33620c1adb7183d368793262175c_dep.md5  dir_608aa47e2d6a6c2803b5247c174c6602.tex  dir_63772b626f2709090f0bdca0f40827b4.tex  dir_63772b626f2709090f0bdca0f40827b4_dep.md5  dir_65db18c67cf9dbbb21e385e7a63b60b4.tex  dir_65db18c67cf9dbbb21e385e7a63b60b4_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  (+50 more)
src/: CMakeLists.txt
src/example/: CMakeLists.txt  hogconfig.txt  libraryExample.cpp  main.cpp
src/lib/: CMakeLists.txt  hog.cpp  hogdescriptor.hpp
src/lib/hogdescriptor/: CMakeLists.txt  hogdescriptor.cpp
src/lib/hogdescriptor/include/hogdescriptor/: hogdescriptor.hpp
src/lib/texvisualization/: CMakeLists.txt  texvisualization.cpp
src/lib/texvisualization/include/texvisualization/: texvisualization.hpp
src/tests/: CMakeLists.txt  hogtest.cpp
tests/: CMakeLists.txt  hogtest.cpp
